--- a/src/css/common.css
+++ b/src/css/common.css
@@ -34,10 +34,35 @@ h1,h2,h3,h4,h5,h6,p{
         font-style: normal
     }      
   
-  .container{
-    max-width: 320px;
-    padding-left: 32px;
-    padding-right: 32px;
-    margin: 0 auto; 
-  }
+    .container {
+      min-width: 320px;
+      max-width: 375px;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin: 0 auto;
+    }
+
+    @media screen and (min-width: 768px) {
+      .container {
+        max-width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
+      }
+    }
+
+    @media screen and (min-width: 1280px) {
+      .container {
+        max-width: 1280px;
+        padding-left: 50px;
+        padding-right: 50px;
+      }
+    }
+    
+    @media screen and (min-width: 1440px) {
+      .container {
+        max-width: 1440px;
+        padding-left: 100px;
+        padding-right: 100px;
+      }
+    }
   
