--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,26 +1,35 @@
 <!-- ===== FOOTER ===== -->
-<footer class="footer">
+<footer>
 
-<div class="footer-list-wrapper">
-    <ul class="footer-list">
-        <li class="footer-link">
-            <a href="" class="footer-anchor">About us</a>
-        </li>
-        <li class="footer-link">
-            <a href="" class="footer-anchor">Our collection</a>
-        </li>
-    </ul>
-
-    <ul class="footer-list second">
-        <li class="footer-link">
-            <a href="" class="footer-anchor">Customer order</a>
-                </li>
-        <li class="footer-link">
-            <a href="" class="footer-anchor">Testimonials</a>
-                </li>
-    </ul>
-</div>
-
-    <p class="slogan">A touch of <span class="ukrainian">Ukrainian</span> culture in every embroidery</p>
-
-</footer>
+        <div class="container footer-container">
+            <div class="footer-list-wrapper">
+                <ul class="footer-list">
+                    <li class="footer-link">
+                        <a href="" class="footer-anchor">About us</a>
+                    </li>
+                    <li class="footer-link">
+                        <a href="" class="footer-anchor">Our collection</a>
+                    </li>
+                </ul>
+            
+                <ul class="footer-list second">
+                    <li class="footer-link">
+                        <a href="" class="footer-anchor">Customer order</a>
+                            </li>
+                    <li class="footer-link">
+                        <a href="" class="footer-anchor">Testimonials</a>
+                            </li>
+                </ul>
+            </div>
+                <p class="slogan">
+                    <span>A</span> 
+                    <span>touch</span> 
+                    <span>of</span> 
+                    <span class="ukrainian">Ukrainian</span> 
+                    <span>culture</span> 
+                    <span>in</span> 
+                    <span>every</span> 
+                    <span>embroidery</span>
+                </p>
+        </div>
+    </footer>
