--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,6 +22,7 @@ h1,h2,h3,h4,h5,h6,p{
     }
     
     a {
+        color: inherit;
         text-decoration: none;
     }
   
@@ -32,8 +33,8 @@ h1,h2,h3,h4,h5,h6,p{
   
     address {
         font-style: normal
-    }      
-  
+    }
+    
     .container {
       min-width: 320px;
       max-width: 375px;
@@ -65,4 +66,6 @@ h1,h2,h3,h4,h5,h6,p{
         padding-right: 100px;
       }
     }
+
+    
   
