--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -27,25 +27,29 @@
           <img class="hero-girl" src="" alt="girl" width="335" height="545" />
         </picture>
       </li>
-      <li class="hero-li">
-        <h1 class="hero-title">
-          Reviving the traditional
-          <span class="hero-title-span"> Ukrainian </span> artistry in every
-          stitch.
-        </h1>
-        <button class="hero-button" type="button">
-          <a class="hero-button-order" href="#your-order"> ORDER</a>
-          <svg class="hero-order-icon" width="26" height="26">
-            <use href="/img/svg-icons/svg.svg#icon-untitled"></use>
-          </svg>
-        </button>
-      </li>
-      <li class="hero-li">
-        <picture>
-          <source srcset="/img/Star.webp 1x, /img/Star@2x.webp 2x" />
-          <img class="hero-star" src="" alt="star" width="52" height="51" />
-        </picture>
-        <h4 class="hero-text">all embroidery is made by hand</h4>
+      <li class="hero-title-block">
+        <div class="hero-title-text">
+          <h1 class="hero-title">
+            Reviving the traditional
+            <span class="hero-title-span"> Ukrainian </span> artistry in every
+            stitch.
+          </h1>
+
+          <div class="hero-button">
+            <a class="hero-button-order" href="#your-order"> ORDER</a>
+            <svg class="hero-order-icon" width="26" height="26">
+              <use href="/img/svg-icons/svg.svg#icon-untitled"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="hero-star-block">
+          <picture>
+            <source srcset="/img/Star.webp 1x, /img/Star@2x.webp 2x" />
+            <img class="hero-star" src="" alt="star" width="52" height="51" />
+          </picture>
+          <h4 class="hero-text">all embroidery is made by hand</h4>
+        </div>
       </li>
     </ul>
   </div>
