--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,32 +1,34 @@
 <!-- ===== FOOTER ===== -->
 <footer>
 
-        <div class="container footer-container">
-            <div class="footer-list-wrapper">
-                <ul class="footer-list">
-                    <li class="footer-link">
-                        <a href="" class="footer-anchor">About us</a>
-                    </li>
-                    <li class="footer-link">
-                        <a href="" class="footer-anchor">Our collection</a>
-                    </li>
-                    <li class="footer-link">
-                        <a href="" class="footer-anchor">Customer order</a>
+            <div class="image-wrapper">
+                <div class="container footer-container">
+                    <div class="footer-list-wrapper">
+                        <ul class="footer-list">
+                            <li class="footer-link">
+                                <a href="" class="footer-anchor">About us</a>
                             </li>
-                    <li class="footer-link">
-                        <a href="" class="footer-anchor">Testimonials</a>
+                            <li class="footer-link">
+                                <a href="" class="footer-anchor">Our collection</a>
                             </li>
-                </ul>
+                            <li class="footer-link">
+                                <a href="" class="footer-anchor">Customer order</a>
+                                    </li>
+                            <li class="footer-link">
+                                <a href="" class="footer-anchor">Testimonials</a>
+                                    </li>
+                        </ul>
+                    </div>
+                        <p class="slogan">
+                            <span>A</span> 
+                            <span>touch</span> 
+                            <span>of</span> 
+                            <span class="ukrainian">Ukrainian</span> 
+                            <span>culture</span> 
+                            <span>in</span> 
+                            <span>every</span> 
+                            <span>embroidery</span>
+                        </p>
+                </div>
             </div>
-                <p class="slogan">
-                    <span>A</span> 
-                    <span>touch</span> 
-                    <span>of</span> 
-                    <span class="ukrainian">Ukrainian</span> 
-                    <span>culture</span> 
-                    <span>in</span> 
-                    <span>every</span> 
-                    <span>embroidery</span>
-                </p>
-        </div>
     </footer>
