--- a/src/css/common.css
+++ b/src/css/common.css
@@ -35,6 +35,10 @@ h1,h2,h3,h4,h5,h6,p{
         font-style: normal
     }
     
+    section{ 
+      margin-top: 80px; 
+    } 
+
     .container {
       min-width: 320px;
       max-width: 375px;
@@ -49,6 +53,10 @@ h1,h2,h3,h4,h5,h6,p{
         padding-left: 32px;
         padding-right: 32px;
       }
+
+      section{ 
+        margin-top: 100px; 
+      } 
     }
 
     @media screen and (min-width: 1280px) {
@@ -57,6 +65,9 @@ h1,h2,h3,h4,h5,h6,p{
         padding-left: 50px;
         padding-right: 50px;
       }
+      section{ 
+        margin-bottom:150px; 
+      }   
     }
     
     @media screen and (min-width: 1440px) {
@@ -67,5 +78,82 @@ h1,h2,h3,h4,h5,h6,p{
       }
     }
 
-    
-  
+    /* =========================================================ANIMATION */
+
+    .ukrainian {
+      color: #ECD979;
+  }
+  .slogan {
+      transform: scale(0.94);
+      animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+  }
+  @keyframes scale {
+      100% {
+          transform: scale(1);
+      }
+  }
+  .animation {
+      display: inline-block;
+      opacity: 0;
+      filter: blur(4px);
+  }
+  .animation:nth-child(1) {
+      animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(2) {
+      animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(3) {
+      animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(4) {
+      animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(5) {
+      animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(6) {
+      animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(7) {
+      animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(8) {
+      animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(9) {
+      animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(10) {
+      animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(11) {
+      animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(12) {
+      animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(13) {
+      animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(14) {
+      animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(15) {
+      animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(16) {
+      animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(17) {
+      animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  .animation:nth-child(18) {
+      animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  @keyframes fade-in {
+      100% {
+          opacity: 1;
+          filter: blur(0);
+      }
+  }
