changed background-image position

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -20,14 +20,14 @@
                         </ul>
                     </div>
                         <p class="slogan">
-                            <span>A</span> 
-                            <span>touch</span> 
-                            <span>of</span> 
-                            <span class="ukrainian">Ukrainian</span> 
-                            <span>culture</span> 
-                            <span>in</span> 
-                            <span>every</span> 
-                            <span>embroidery</span>
+                            <span class="animation">A</span> 
+                            <span class="animation">touch</span> 
+                            <span class="animation">of</span> 
+                            <span class="animation ukrainian">Ukrainian</span> 
+                            <span class="animation">culture</span> 
+                            <span class="animation">in</span> 
+                            <span class="animation">every</span> 
+                            <span class="animation">embroidery</span>
                         </p>
                 </div>
             </div>
