--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,34 +1,36 @@
 <!-- ===== FOOTER ===== -->
 <footer>
 
-            <div class="image-wrapper">
-                <div class="container footer-container">
-                    <div class="footer-list-wrapper">
-                        <ul class="footer-list">
-                            <li class="footer-link">
-                                <a href="" class="footer-anchor">About us</a>
-                            </li>
-                            <li class="footer-link">
-                                <a href="" class="footer-anchor">Our collection</a>
-                            </li>
-                            <li class="footer-link">
-                                <a href="" class="footer-anchor">Customer order</a>
-                                    </li>
-                            <li class="footer-link">
-                                <a href="" class="footer-anchor">Testimonials</a>
-                                    </li>
-                        </ul>
+            
+     <div class="common-div">
+                    <div class="container footer-container">
+                        <div class="footer-list-wrapper">
+                            <ul class="footer-list">
+                                <li class="footer-link">
+                                    <a href="" class="footer-anchor">About us</a>
+                                </li>
+                                <li class="footer-link">
+                                    <a href="" class="footer-anchor">Our collection</a>
+                                </li>
+                                <li class="footer-link">
+                                    <a href="" class="footer-anchor">Customer order</a>
+                                        </li>
+                                <li class="footer-link">
+                                    <a href="" class="footer-anchor">Testimonials</a>
+                                        </li>
+                            </ul>
+                        </div>
+                            <p class="slogan">
+                                <span class="animation">A</span> 
+                                <span class="animation">touch</span> 
+                                <span class="animation">of</span> 
+                                <span class="animation ukrainian">Ukrainian</span> 
+                                <span class="animation">culture</span> 
+                                <span class="animation">in</span> 
+                                <span class="animation">every</span> 
+                                <span class="animation">embroidery</span>
+                            </p>
                     </div>
-                        <p class="slogan">
-                            <span class="animation">A</span> 
-                            <span class="animation">touch</span> 
-                            <span class="animation">of</span> 
-                            <span class="animation ukrainian">Ukrainian</span> 
-                            <span class="animation">culture</span> 
-                            <span class="animation">in</span> 
-                            <span class="animation">every</span> 
-                            <span class="animation">embroidery</span>
-                        </p>
-                </div>
-            </div>
+                <div class="image-wrapper"></div>
+     </div>
     </footer>
