mobile-menu-update code

--- a/src/partials/mobile-menu-header.html
+++ b/src/partials/mobile-menu-header.html
@@ -1,5 +1,5 @@
 <!------ MOBILE MENU ------>
-<div class="mobile-menu">
+<div class="mobile-menu is-open">
   <div class="container mobile-menu-container">
     <div class="mobile-menu-header">
       <address class="mobile-menu-contacts">
@@ -34,13 +34,13 @@
       </ul>
     </nav>
     <div class="mobile-menu-graphics">
-      <svg class="mobile-menu-graphics-icon" width="340" height="302">
-        <use
-          href="../img/svg-icons/svg.svg#icon-logo"
-          width="340"
-          height="302"
-        ></use>
-      </svg>
+      <img
+        class="menu-mobile-ornament"
+        src="/img/ornament/ornament-gray-min.png"
+        alt="ornament"
+        width="340"
+        height="302"
+      />
     </div>
   </div>
 </div>
