--- a/src/css/mobile-menu-header.css
+++ b/src/css/mobile-menu-header.css
@@ -1,21 +1,16 @@
 /* MOBILE MENU */
-a {
-    color: inherit;
-}
-
 .mobile-menu {
     position: fixed;
     top: 0;
     right: 0;
     width: 320px;
-    height: 100%;
+    height: 852px;
     background: #ecd979;
     z-index: 9999999;
     overflow-y: auto;
 
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .mobile-menu.is-open {
@@ -76,6 +71,7 @@ a {
 }
 
 .mobile-menu-nav {
+    display: block;
     text-align: right;
     margin-bottom: 185px;
 }
@@ -96,6 +92,19 @@ a {
 
 .mobile-menu-list-items:not(:last-child) {
     margin-bottom: 20px;
+}
+
+.mobile-menu-graphics {
+    position: relative;
+    width: 340px;
+    height: 302px;
+    overflow: hidden;
+
+}
+
+.menu-mobile-ornament {
+    position: absolute;
+    transform: translateY(20%);
 }
 
 /* TABLET MENU */
