--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="container hero-container">
+  <div class="container">
     <ul class="hero-ul">
       <li class="hero-li">
         <picture>
@@ -30,9 +30,14 @@
       <li class="hero-title-block">
         <div class="hero-title-text">
           <h1 class="hero-title">
-            Reviving the traditional
-            <span class="hero-title-span"> Ukrainian </span> artistry in every
-            stitch.
+            <span class="animation">Reviving</span>
+            <span class="animation">the</span>
+            <span class="animation">traditional</span>
+            <span class="hero-title-span animation"> Ukrainian </span>
+            <span class="animation">artistry</span>
+            <span class="animation">in</span>
+            <span class="animation">every</span>
+            <span class="animation">stitch.</span>
           </h1>
 
           <div class="hero-button">
