--- a/src/css/mobile-menu-header.css
+++ b/src/css/mobile-menu-header.css
@@ -4,13 +4,17 @@
     top: 0;
     right: 0;
     width: 320px;
-    height: 852px;
+    height: 100%;
     background: #ecd979;
     z-index: 9999999;
     overflow-y: auto;
 
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-image: url(../img/ornament/ornament-gray-min.png);
+    background-repeat: no-repeat;
+    background-size: 340px 302px;
+    background-position: bottom -51px center;
 }
 
 .mobile-menu.is-open {
@@ -29,10 +33,13 @@
     line-height: 0;
     stroke: #1c2225;
     position: absolute;
-    top: 21px;
-    right: 20px;
+    top: 10px;
+    right: 15px;
     align-items: center;
     justify-content: center;
+    width: 36px;
+    height: 36px;
+
 }
 
 .mobile-menu-close-btn:hover,
@@ -107,14 +114,27 @@
     transform: translateY(20%);
 }
 
+
 /* TABLET MENU */
 @media screen and (min-width: 768px) {
     .mobile-menu {
         width: 380px;
         transform: translateX(100%);
+        background-size: 545px 484px;
+        background-position: bottom -120px left -74px;
     }
 
     .mobile-menu.is-open {
         transform: translateX(0%);
+    }
+
+    .mobile-menu-close-btn-icon {
+        width: 22px;
+        height: 22px;
+    }
+
+    .mobile-menu-close-btn {
+        width: 44px;
+        height: 44px;
     }
 }
