--- a/src/partials/mobile-menu-header.html
+++ b/src/partials/mobile-menu-header.html
@@ -8,12 +8,8 @@
         >
       </address>
       <button class="mobile-menu-close-btn" type="button">
-        <svg class="mobile-menu-close-btn-icon" width="36" height="36">
-          <use
-            href="/img/svg-icons/svg.svg#icon-x"
-            width="20"
-            height="20"
-          ></use>
+        <svg class="mobile-menu-close-btn-icon" width="18" height="18">
+          <use href="/img/svg-icons/svg.svg#icon-x"></use>
         </svg>
       </button>
     </div>
@@ -33,14 +29,5 @@
         </li>
       </ul>
     </nav>
-    <div class="mobile-menu-graphics">
-      <img
-        class="menu-mobile-ornament"
-        src="/img/ornament/ornament-gray-min.png"
-        alt="ornament"
-        width="340"
-        height="302"
-      />
-    </div>
   </div>
 </div>
