--- a/src/css/common.css
+++ b/src/css/common.css
@@ -36,7 +36,7 @@ h1,h2,h3,h4,h5,h6,p{
     }
     
     section{ 
-      margin-top: 80px; 
+      padding-top: 80px; 
     } 
 
     .container {
@@ -55,7 +55,7 @@ h1,h2,h3,h4,h5,h6,p{
       }
 
       section{ 
-        margin-top: 100px; 
+        padding-top: 100px; 
       } 
     }
 
@@ -66,7 +66,7 @@ h1,h2,h3,h4,h5,h6,p{
         padding-right: 50px;
       }
       section{ 
-        margin-bottom:150px; 
+        margin-top:150px; 
       }   
     }
     
