--- a/src/css/common.css
+++ b/src/css/common.css
@@ -65,8 +65,9 @@ h1,h2,h3,h4,h5,h6,p{
         padding-left: 50px;
         padding-right: 50px;
       }
+
       section{ 
-        margin-top:150px; 
+        padding-top:150px; 
       }   
     }
     
