--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -13,10 +13,10 @@
     
    
     <picture class="picture-about-us">
-      <source srcset="../img/about-us/about-us-desktop1280.webp 1x, ../img/about-us/about-us-desktop1280@2x.webp 2x"  media="(min-width:1280px)" width="594" height="545">
-      <source srcset="../img/about-us/about-us-tablet.webp 1x, ../img/about-us/about-us-tablet@2x.webp 2x" media="(min-width:768px)" width="704" height="545">
-      <source srcset="../img/about-us/about-us-mobile.webp 1x, ../img/about-us/about-us-mobile@2x.webp 2x" media="(max-width:767px)" width="335" height="499">
-      <img src="../img/about-us/about-us-desktop1280.webp" alt="Vyshyvanka" width="594" height="545">
+      <source srcset="/img/about-us/about-us-desktop1280.webp 1x, /img/about-us/about-us-desktop1280@2x.webp 2x"  media="(min-width:1280px)" width="594" height="545">
+      <source srcset="/img/about-us/about-us-tablet.webp 1x, /img/about-us/about-us-tablet@2x.webp 2x" media="(min-width:768px)" width="704" height="545">
+      <source srcset="/img/about-us/about-us-mobile.webp 1x, /img/about-us/about-us-mobile@2x.webp 2x" media="(max-width:767px)" width="335" height="499">
+      <img src="/img/about-us/about-us-desktop1280.webp" alt="Vyshyvanka" width="594" height="545">
     </picture>
     
   
