--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -72,11 +72,20 @@
   }
 }
   @media screen and (max-width: 767px) and (min-resolution: 192dpi){
-    background-image: url(/img/ornament/elements@2x.png);
+    .section-about-us{
+      background-image: url(/img/ornament/elements@2x.png);
+    }
+    
   }
   @media screen and (min-width: 768px) and (min-resolution: 192dpi){
-    background-image: url(/img/ornament/elements@2x.png);
+    .section-about-us{
+      background-image: url(/img/ornament/elements@2x.png);
+    }
+    
   }
   @media screen and (min-width: 1280px) and (min-resolution: 192dpi){
-    background-image: url(/img/ornament/elements@2x.png);
+    .section-about-us{
+      background-image: url(/img/ornament/elements@2x.png);
+    }
+    
   }
