--- a/src/css/common.css
+++ b/src/css/common.css
@@ -36,7 +36,7 @@ h1,h2,h3,h4,h5,h6,p{
     }
     
     section{ 
-      padding-top: 80px; 
+      padding-bottom: 80px; 
     } 
 
     .container {
@@ -55,7 +55,7 @@ h1,h2,h3,h4,h5,h6,p{
       }
 
       section{ 
-        padding-top: 100px; 
+        padding-bottom: 100px; 
       } 
     }
 
@@ -67,7 +67,7 @@ h1,h2,h3,h4,h5,h6,p{
       }
 
       section{ 
-        padding-top:150px; 
+        padding-bottom:150px; 
       }   
     }
     
