--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,9 +2,8 @@
 <footer>
 
             
-     <div class="common-div">
+     <section class="common-div">
                     <div class="container footer-container">
-                        <div class="footer-list-wrapper">
                             <ul class="footer-list">
                                 <li class="footer-link">
                                     <a href="" class="footer-anchor">About us</a>
@@ -19,7 +18,7 @@
                                     <a href="" class="footer-anchor">Testimonials</a>
                                         </li>
                             </ul>
-                        </div>
+                        
                             <p class="slogan">
                                 <span class="animation">A</span> 
                                 <span class="animation">touch</span> 
@@ -32,5 +31,5 @@
                             </p>
                     </div>
                 <div class="image-wrapper"></div>
-     </div>
+     </section>
     </footer>
