--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="section section-about-us">
+<section class="section section-about-us" id="about-us-id">
   <div class="container container-about-us">
     <div class="description-about-us">
       <h2 class="title-about-us">About Us</h2>
