--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,18 +1,16 @@
 <!-- ===== FOOTER ===== -->
-<footer>
+<footer class="section footer">
 
-            
-     <section class="common-div">
                     <div class="container footer-container">
                             <ul class="footer-list">
                                 <li class="footer-link">
                                     <a href="" class="footer-anchor">About us</a>
                                 </li>
                                 <li class="footer-link">
-                                    <a href="" class="footer-anchor">Our collection</a>
+                                    <a href="" class="footer-anchor">Customer order</a>
                                 </li>
                                 <li class="footer-link">
-                                    <a href="" class="footer-anchor">Customer order</a>
+                                    <a href="" class="footer-anchor">Our collection</a>
                                         </li>
                                 <li class="footer-link">
                                     <a href="" class="footer-anchor">Testimonials</a>
@@ -29,7 +27,7 @@
                                 <span class="animation">every</span> 
                                 <span class="animation">embroidery</span>
                             </p>
-                    </div>
-                <div class="image-wrapper"></div>
-     </section>
+ 
+
+     </div>
     </footer>
