--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,44 +1,35 @@
 
 /*===== FOOTER-MOBILE =====*/
 
-.common-div {
-    border-top: 1px solid rgba(252, 249, 249, 0.1);
+.section {
+border-top: 1px solid rgba(252, 249, 249, 0.1);
 }
 
-.image-wrapper {
-    width: 452px;
-    height: 401px;
+.footer {
+    
     background-image: url("/img/ornament/ornament-yellow@2x-min.png");
     background-repeat: no-repeat;
     background-position: right bottom;
-    background-size: cover;
-    margin-right: auto;
-    margin-left: auto;
-}
+    background-size: 452px 401px;
+    background-position: bottom -221px center;
+    padding-bottom: 277px;
 
-.container.footer-container {
-    border-top: none;    
-    padding-top: 40px;
 }
 
 .footer-list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 auto 40px 0;
-    row-gap: 25px;
-    max-height: 61px;
-    width: 288px;
+    display: grid;
+    grid-template-columns: repeat(2, 140px);
+    grid-template-rows: repeat(2, 32px);
 }
 
 .footer-link {
-    flex: 0 0 124px;
+  
+text-align: left;
 }
 
 .footer-anchor {
     font-weight: 400;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 129%;
     text-transform: uppercase;
     color: #FCF9F9;
@@ -55,7 +46,6 @@ font-size: 44px;
 line-height: 123%;
 letter-spacing: -0.03em;
 color: #FCF9F9;
-margin-bottom: 80px;
 margin-right: auto;
 margin-left: auto;
 }
@@ -70,26 +60,21 @@ margin-left: auto;
 
 @media screen and (min-width: 768px) {
 
-    .common-div {
-        display: flex;
+    .footer  {
+      display: flex;
         flex-wrap: nowrap;
         border-top: 1px solid rgba(252, 249, 249, 0.1);
         min-height: 370px;
-        margin-top: 0;
-        margin-bottom: 0;
+        background-size: 452px 401px;
+        background-position: top right -277px;
     }
 
     .container.footer-container {
-        padding-right: 0;
-        border: none;
+        margin-left: 0;
     }
 
-    .image-wrapper {
-        background-position: right 210% top;
-        background-size: cover;
-        }
-
 .footer-list {
+    display: flex;
     flex-wrap: nowrap;
     min-width: 478px;
     gap: 25px;
@@ -98,10 +83,6 @@ margin-left: auto;
     margin-left: 0;
     }
 
-.footer-link {
-    display: flex;
-    flex: 0 0 auto;
-}
 
 .footer-anchor {
     font-size: 14px;
@@ -119,14 +100,8 @@ margin-left: auto;
 
 @media screen and (min-width: 1280px) {
 
-.common-div {
-    height: 363px;
-}
-.image-wrapper {
-    width: 595px;
-    height: 528px;
-    background-position: right -150px top -50px;
-    background-size: contain;
+.footer {
+    background-position: right -210px top;
     }
 
 .slogan {
@@ -136,5 +111,12 @@ margin-left: auto;
     font-size: 64px;
     line-height: 116%;
     }
+}
 
+/*===== FOOTER-DESKTOP-1440 =====*/
+
+@media screen and (min-width: 1440px) {
+    .footer {
+        background-position: right -70px top;
+        }
 }
