--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,5 @@
-<section class="hero">
+<!--  ====== HERO -->
+<div class="hero">
   <div class="container">
     <ul class="hero-ul">
       <li class="hero-li">
@@ -33,15 +34,16 @@
             <span class="animation">Reviving</span>
             <span class="animation">the</span>
             <span class="animation">traditional</span>
-            <span class="hero-title-span animation"> Ukrainian </span>
+            <span class="animation hero-title-span"> Ukrainian </span>
             <span class="animation">artistry</span>
             <span class="animation">in</span>
             <span class="animation">every</span>
-            <span class="animation">stitch.</span>
+            <span class="animation">stitch</span>
+            <span class="animation">.</span>
           </h1>
 
           <div class="hero-button">
-            <a class="hero-button-order" href="#your-order"> ORDER</a>
+            <a class="hero-button-order" href="#order-container"> ORDER</a>
             <svg class="hero-order-icon" width="26" height="26">
               <use href="/img/svg-icons/svg.svg#icon-untitled"></use>
             </svg>
@@ -58,4 +60,4 @@
       </li>
     </ul>
   </div>
-</section>
+</div>
