--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,16 +4,16 @@
                     <div class="container footer-container">
                             <ul class="footer-list">
                                 <li class="footer-link">
-                                    <a href="" class="footer-anchor">About us</a>
+                                    <a href="#about-us-id" class="footer-anchor">About us</a>
                                 </li>
                                 <li class="footer-link">
-                                    <a href="" class="footer-anchor">Customer order</a>
+                                    <a href="#order-container" class="footer-anchor">Customer order</a>
                                 </li>
                                 <li class="footer-link">
-                                    <a href="" class="footer-anchor">Our collection</a>
+                                    <a href="#" class="footer-anchor">Our collection</a>
                                         </li>
                                 <li class="footer-link">
-                                    <a href="" class="footer-anchor">Testimonials</a>
+                                    <a href="#testimonials" class="footer-anchor">Testimonials</a>
                                         </li>
                             </ul>
                         
