--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -25,7 +25,7 @@
             "
             media="(min-width:320px)"
           />
-          <img class="hero-girl" src="" alt="girl" width="335" height="545" />
+          <img class="hero-girl" src="/img/hero/hero-desktop.webp" alt="girl" />
         </picture>
       </li>
       <li class="hero-title-block">
@@ -38,8 +38,7 @@
             <span class="animation">artistry</span>
             <span class="animation">in</span>
             <span class="animation">every</span>
-            <span class="animation">stitch</span>
-            <span class="animation">.</span>
+            <span class="animation">stitch.</span>
           </h1>
 
           <div class="hero-button">
