--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -125,6 +125,7 @@
 @media screen and (min-width: 768px) {
   .order-container {
     min-width: 768px;
+    position: relative;
   }
 
   .order-girl-green {
