--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -4,7 +4,7 @@
 }
 
 .order-girl-green {
-  background-image: url(../img/your-order/bcg-mobile.webp);
+  background-image: url(/img/your-order/bcg-mobile.webp);
   background-position: center;
   margin: 0 auto;
   width: 375px;
@@ -14,7 +14,7 @@
 
 @media screen and (min-resolution: 192dpi) {
   .order-girl-green {
-    background-image: url(../img/your-order/bcg-mobile@2x.webp);
+    background-image: url(/img/your-order/bcg-mobile@2x.webp);
   }
 }
 
@@ -129,14 +129,14 @@
   }
 
   .order-girl-green {
-    background-image: url(../img/your-order/bcg-tablet.webp);
+    background-image: url(/img/your-order/bcg-tablet.webp);
     width: 768px;
     height: 776px;
   }
 
   @media screen and (min-resolution: 192dpi) {
     .order-girl-green {
-      background-image: url(../img/your-order/bcg-tablet@2x.webp);
+      background-image: url(/img/your-order/bcg-tablet@2x.webp);
     }
   }
   .order-form-header {
@@ -170,7 +170,7 @@
   }
 
   .order-form-desk {
-    background-image: url(../img/ornament/ornament-gray-min.png);
+    background-image: url(/img/ornament/ornament-gray-min.png);
     background-repeat: no-repeat;
     background-position: top 90% right 215%;
   }
@@ -188,14 +188,14 @@
   }
 
   .order-girl-green {
-    background-image: url(../img/your-order/bcg-desktop.webp);
+    background-image: url(/img/your-order/bcg-desktop.webp);
     width: 1280px;
     height: 776px;
   }
 
   @media screen and (min-resolution: 192dpi) {
     .order-girl-green {
-      background-image: url(../img/your-order/bcg-desktop@2x.webp);
+      background-image: url(/img/your-order/bcg-desktop@2x.webp);
     }
   }
 
@@ -210,7 +210,7 @@
     gap: 50px;
     padding: 150px 50px;
 
-    background-image: url(../img/ornament/ornament-gray-min.png);
+    background-image: url(/img/ornament/ornament-gray-min.png);
     background-repeat: no-repeat;
     background-position: top 60% right 150%;
   }
