--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -35,7 +35,7 @@
           <svg class="order-btn-icon" width="26" height="10">
             <use
               class="order-btn-arrow"
-              href="../img/svg-icons/svg.svg#icon-untitled"
+              href="/img/svg-icons/svg.svg#icon-untitled"
             ></use>
           </svg>
         </button>
@@ -45,20 +45,20 @@
       <picture>
         <source
           srcset="
-            ../img/your-order/your-order-desktop1280.webp    1x,
-            ../img/your-order/your-order-desktop1280@2x.webp 2x
+        /img/your-order/your-order-desktop1280.webp    1x,
+            /img/your-order/your-order-desktop1280@2x.webp 2x
           "
           media="(min-width: 1280px)"
         />
         <source
           srcset="
-            ../img/your-order/your-order-tablet.webp    1x,
-            ../img/your-order/your-order-tablet@2x.webp 2x
+            /img/your-order/your-order-tablet.webp    1x,
+            /img/your-order/your-order-tablet@2x.webp 2x
           "
           media="(min-width: 768px)"
         />
 
-        <img src="../img/your-order/your-order-desktop1280.webp" alt="jacket" />
+        <img src="/img/your-order/your-order-desktop1280.webp" alt="jacket" />
       </picture>
     </div>
   </div>
